# balancer

./: .gitignore  README.md
data/: .gitignore  boinc_result_host_dataset.csv  catboost_success_model.cbm  catboost_time_model.cbm  df_with_matrix.csv  info.txt
scripts/: .gitignore  add_mat_to_dataset.py  analyze_dataset.py  create_dataset.py  create_new_version.sh  hosts.txt  request_jobs.sh  setup_ubuntu.sh  train.py  train_final.py
scripts/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
scripts/catboost_info/learn/: events.out.tfevents
scripts/catboost_info/test/: events.out.tfevents
tasks/dtransversal/: CMakeLists.txt  file.txt  input.txt  main.cpp
tasks/dtransversal/include/: dtransversal.hpp
tasks/dtransversal/src/: dtransversal.cpp
tasks/transversal/: CMakeLists.txt  input.txt  main.cpp
tasks/transversal/src/: transversal.cpp
work_generator/: dtransversal.py  generator.py
