cmake_minimum_required(VERSION 3.20)

project(Transversal)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin.dbg)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin.rel)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin.relwithdbg)

SET(DIR_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include")

file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS "${DIR_HEADERS}/*.hpp")
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${DIR_SOURCES}/*.cpp")

SET(DIR_CXXOPTS_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/cxxopts/include)
file(GLOB_RECURSE CXXOPTS_HEADERS CONFIGURE_DEPENDS "${DIR_CXXOPTS_HEADERS}/*.hpp")

add_executable(Transversal main.cpp ${SOURCES})
target_include_directories(Transversal PUBLIC ${DIR_HEADERS})
target_include_directories(Transversal PUBLIC ${DIR_CXXOPTS_HEADERS})